--- a/app/src/main/res/layout/fragment_basic.xml
+++ b/app/src/main/res/layout/fragment_basic.xml
@@ -9,25 +9,24 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/picture"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:layout_anchorGravity="bottom|right|end"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                app:layout_anchorGravity="bottom|center"
                 app:backgroundTint="#5CB85C"
                 app:rippleColor="#FFF"
                 app:layout_anchor="@+id/texture"
-                android:src="@android:drawable/ic_menu_camera"
-                android:layout_marginBottom="24dp"
+                android:src="@drawable/camera"
                 android:layout_marginRight="24dp"
                 android:layout_centerHorizontal="true" />
 
             <com.example.kai.icrowd.NewTextureView
                 android:id="@+id/texture"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true" />
 
