--- a/app/src/main/res/layout/activity_check_pos.xml
+++ b/app/src/main/res/layout/activity_check_pos.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.kai.icrowd.GestureRelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/check_pos_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.kai.icrowd.CheckPos"
-    >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/check_pos_layout"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#000"
+             tools:context="com.example.kai.icrowd.CheckPos">
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:id="@+id/progressBar"
+        android:progressDrawable="@drawable/circle"
+        android:layout_gravity="center"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:id="@+id/show_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:id="@+id/progressBar"
-        android:progressDrawable="@drawable/circle"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+    <com.example.kai.icrowd.GestureRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</com.example.kai.icrowd.GestureRelativeLayout>
+</FrameLayout>
