--- a/app/src/main/res/layout/fragment_basic.xml
+++ b/app/src/main/res/layout/fragment_basic.xml
@@ -25,10 +25,14 @@
 
             <com.example.kai.icrowd.NewTextureView
                 android:id="@+id/texture"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true" />
+
+            <com.example.kai.icrowd.GestureRelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </android.support.design.widget.CoordinatorLayout>
 
