--- a/app/src/main/res/menu/actions.xml
+++ b/app/src/main/res/menu/actions.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Refresh -->
     <item android:id="@+id/action_clear"
         android:icon="@drawable/eraser"
         android:title="@string/action_clear"
-        android:orderInCategory="1"
         android:showAsAction="ifRoom" />
 
 </menu>
