--- a/app/src/main/res/layout/activity_check_pos.xml
+++ b/app/src/main/res/layout/activity_check_pos.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/check_pos_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000"
+             android:layout_gravity="center"
              tools:context="com.example.kai.icrowd.CheckPos">
+
+    <ImageView
+        android:id="@+id/show_image"
+        android:layout_below="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text="Please hold your device..."
+        android:textColor="#fff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/holdDevice"
+        android:layout_marginTop="18dp"
+        android:layout_below="@+id/show_image"
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
@@ -14,17 +31,14 @@
         android:layout_gravity="center"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginTop="201dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-    <ImageView
-        android:id="@+id/show_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
-<!--
-    <com.example.kai.icrowd.GestureRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
--->
-</FrameLayout>
+    <!--
+        <com.example.kai.icrowd.GestureRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    -->
+</RelativeLayout>
